# trackmate

./: roadmap.md
comparisions/: llamaindex.py  pydantic_ai.py
core/: .env.dev  .gitignore  README.md  bot_telegram.py  data.py  main.py  pyproject.toml  sql_gen.py
core/agents/: chat.py  db_utils.py  expense.py  schema.py  team.py
core/auth/: google.py
core/cli/: chat.py  telegram.py
core/config/: logger.py  settings.py
core/db/: schema.py  utils.py
core/services/: sheets.py
core/tests/manual/: common.py  test_expense_team.py
core/tools/: ocr.py  sheets.py
