[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "duckdb>=1.2.1",
    "faker>=37.0.2",
    "pandas>=2.2.3",
    "pretty-errors>=1.2.25",
    "pydantic>=2.10.6",
    "pydantic-ai[logfire]>=0.0.43",
]
