[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "duckdb>=1.2.1",
    "faker>=37.0.2",
    "llama-cloud-services>=0.6.6",
    "pandas>=2.2.3",
    "pretty-errors>=1.2.25",
    "pydantic>=2.10.6",
    "pydantic-ai[logfire]>=0.0.43",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
]
